working thorugh mvvm tutorial

--- a/JMLearnMaui/MonkeyFinder/MonkeyFinder/View/MainPage.xaml
+++ b/JMLearnMaui/MonkeyFinder/MonkeyFinder/View/MainPage.xaml
@@ -23,10 +23,28 @@
         </CollectionView.ItemsSource>
         <CollectionView.ItemTemplate>
             <DataTemplate x:DataType="model:Monkey">
-                <HorizontalStackLayout Padding="10" Spacing="10">
-                    <Label Text="{Binding Name}" FontSize="24" />
-                    <Label Text="{Binding Location}" FontSize="10" />
+
+                <HorizontalStackLayout Padding="10">
+                    <Image Source="{Binding Image}" 
+                           WidthRequest="100" 
+                           HeightRequest="100"
+                           Aspect="AspectFill" />
+                    <!--<Label>
+                        <Label.Text>
+                            <MultiBinding StringFormat="{}{0} | {1}">
+                                <Binding Path="Name" />
+                                <Binding Path="Location" />
+                            </MultiBinding>
+                        </Label.Text>
+                    </Label>-->
+                    <VerticalStackLayout Padding="10" 
+                                         Spacing="4"
+                                         VerticalOptions="Center">
+                        <Label Text="{Binding Name}" FontSize="24" />
+                        <Label Text="{Binding Location}" FontSize="12" />
+                    </VerticalStackLayout>
                 </HorizontalStackLayout>
+                
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
