--- a/JMLearnMaui/MonkeyFinder/MonkeyFinder/View/DetailsPage.xaml
+++ b/JMLearnMaui/MonkeyFinder/MonkeyFinder/View/DetailsPage.xaml
@@ -36,6 +36,14 @@
                 
             </Grid>
 
+            <Button Text="Show on Map"
+                    Command="{Binding OpenMapCommand}"
+                    HorizontalOptions="Center"
+                    WidthRequest="200"
+                    Margin="8"
+                    Style="{StaticResource ButtonOutline}" />
+
+
             <VerticalStackLayout>
 
                 <Label Text="{Binding Monkey.Details}"
