--- a/JMLearnMaui/MonkeyFinder/MonkeyFinder/View/MainPage.xaml
+++ b/JMLearnMaui/MonkeyFinder/MonkeyFinder/View/MainPage.xaml
@@ -3,19 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:MonkeyFinder.Model"
              xmlns:viewmodel="clr-namespace:MonkeyFinder.ViewModel"
+             xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
              x:DataType="viewmodel:MonkeysViewModel"
              x:Class="MonkeyFinder.View.MainPage"
+             ios:Page.UseSafeArea="True"
              Title="{Binding Title}">
 
     <Grid ColumnDefinitions="*,*"
           ColumnSpacing="5"
           RowDefinitions="*,Auto">
 
-        <CollectionView Grid.Row="0"
-                        Grid.ColumnSpan="2"
+        <RefreshView Grid.ColumnSpan="2"
+                     Command="{Binding GetMonkeysCommand}"
+                     IsRefreshing="{Binding IsRefreshing}">
+
+            <CollectionView BackgroundColor="Transparent"
                         ItemsSource="{Binding Monkeys}"
                         SelectionMode="None">
-            <CollectionView.ItemTemplate>
+
+                <CollectionView.EmptyView>
+                    <StackLayout VerticalOptions="Center"
+                                 HorizontalOptions="Center"
+                                 WidthRequest="200"
+                                 HeightRequest="200">
+                        <Image Source="nodata.png"
+                               HorizontalOptions="CenterAndExpand"
+                               VerticalOptions="CenterAndExpand"
+                               Aspect="AspectFill" />
+
+                    </StackLayout>
+                </CollectionView.EmptyView>
+            
+                <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:Monkey">
                     <Grid Padding="10">
                         <Frame HeightRequest="125" 
@@ -44,14 +63,24 @@
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
-            
-        </CollectionView>
+                
+            </CollectionView>
 
+        </RefreshView>
+    
         <Button Text="Get Monkeys"
                 Command="{Binding GetMonkeysCommand}"
                 IsEnabled="{Binding IsNotBusy}"
                 Style="{StaticResource ButtonOutline}"
                 Grid.Row="1"
+                Margin="8" />
+        
+        <Button Text="Find Closest"
+                Command="{Binding GetClosestMonkeyCommand}"
+                IsEnabled="{Binding IsNotBusy}"
+                Style="{StaticResource ButtonOutline}"
+                Grid.Row="1"
+                Grid.Column="1"
                 Margin="8" />
 
         <ActivityIndicator IsVisible="{Binding IsBusy}"
